--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
         <version>6.14.3</version>
         </dependency>
         <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+        <dependency>
 
 
             <groupId>io.github.bonigarcia</groupId>
